[project]
name = "aprs-bridge"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "kiss3",
    "ax253",
    "aprs3",
]

[project.optional-dependencies]
# Pypubsub is a real MeshDash core dependency (already present in its venv,
# not something our setup.py installs) -- it's a dev-only dependency here,
# needed so tests can exercise main.py's pub.subscribe wiring for real.
dev = ["pytest", "Pypubsub"]

[tool.pytest.ini_options]
pythonpath = ["plugins"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["plugins"]
