[project]
name = "aprs-bridge"
version = "0.1.0"
requires-python = ">=3.9"
license = "BSD-3-Clause"
dependencies = [
    "kiss3",
    "ax253",
    "aprs3",
]

[project.optional-dependencies]
# Pypubsub and fastapi are real MeshDash core dependencies (already present
# in its venv, not something our setup.py installs) -- dev-only here, needed
# so tests can exercise main.py's pub.subscribe wiring and plugin_router
# routes for real. httpx backs FastAPI's TestClient.
dev = ["pytest", "Pypubsub", "fastapi", "httpx"]

[tool.pytest.ini_options]
pythonpath = ["plugins"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["plugins"]
